// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package transformer for jsdocs should work with a typescript setup 1`] = `
{
  "devDependencies": {
    "jsdoc-to-markdown": "^7.1.1",
  },
  "greenkeeper": {
    "ignore": [
      "jsdoc-to-markdown",
    ],
  },
  "metapak": {
    "configs": [
      "typescript",
    ],
    "data": {
      "distFiles": "yolo.js",
      "files": "yolo.ts",
    },
  },
  "scripts": {
    "doc": "echo "# API" > API.md; jsdoc2md yolo.js >> API.md && git add API.md",
    "precz": "npm run doc",
    "preversion": "npm run doc",
  },
}
`;

exports[`Package transformer for jsdocs should work with an empty package.json 1`] = `
{
  "devDependencies": {
    "jsdoc-to-markdown": "^7.1.1",
  },
  "greenkeeper": {
    "ignore": [
      "jsdoc-to-markdown",
    ],
  },
  "metapak": {
    "data": {
      "files": "yolo.js",
    },
  },
  "scripts": {
    "doc": "echo "# API" > API.md; jsdoc2md yolo.js >> API.md && git add API.md",
    "precz": "npm run doc",
    "preversion": "npm run doc",
  },
}
`;
